[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Exit_button.gd" type="Script" id=1]
[ext_resource path="res://Scripts/SettingsButton.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Main-menu.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Fullscreen-Button.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Multiplayer-menu.gd" type="Script" id=5]
[ext_resource path="res://ConnectionII.tres" type="DynamicFont" id=6]

[node name="Main menu" type="Node2D"]

[node name="Node" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="Node"]
__meta__ = {
"_editor_description_": ""
}

[node name="ColorRect" type="ColorRect" parent="Node/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.109804, 0.109804, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_menu" type="VBoxContainer" parent="Node/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node/CanvasLayer/Main_menu"]
margin_right = 1920.0
margin_bottom = 267.0
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
text = "Rymdspel 15"
align = 1
valign = 1

[node name="Multiplayer-Button" type="Button" parent="Node/CanvasLayer/Main_menu"]
margin_top = 271.0
margin_right = 1920.0
margin_bottom = 538.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Multiplayer"

[node name="Settings-Button" type="Button" parent="Node/CanvasLayer/Main_menu"]
margin_top = 542.0
margin_right = 1920.0
margin_bottom = 809.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Settings"

[node name="Exit-Button" type="Button" parent="Node/CanvasLayer/Main_menu"]
margin_top = 813.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Exit"
script = ExtResource( 1 )

[node name="Settings_menu" type="VBoxContainer" parent="Node/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Node/CanvasLayer/Settings_menu"]
margin_right = 1920.0
margin_bottom = 357.0
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="Node/CanvasLayer/Settings_menu/GridContainer"]
margin_right = 958.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
text = "Sound Volume"
align = 1
valign = 1

[node name="HSlider" type="HSlider" parent="Node/CanvasLayer/Settings_menu/GridContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Node/CanvasLayer/Settings_menu/GridContainer"]
margin_top = 120.0
margin_right = 958.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
text = "Music Volume "
align = 1
valign = 1

[node name="HSlider2" type="HSlider" parent="Node/CanvasLayer/Settings_menu/GridContainer"]
margin_left = 962.0
margin_top = 120.0
margin_right = 1920.0
margin_bottom = 236.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Node/CanvasLayer/Settings_menu/GridContainer"]
margin_top = 240.0
margin_right = 958.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 6 )
text = "Voicechat Volume "
align = 1
valign = 1

[node name="HSlider3" type="HSlider" parent="Node/CanvasLayer/Settings_menu/GridContainer"]
margin_left = 962.0
margin_top = 240.0
margin_right = 1920.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Node/CanvasLayer/Settings_menu"]
margin_top = 361.0
margin_right = 1920.0
margin_bottom = 718.0
size_flags_vertical = 3

[node name="Fullscreen-Button" type="CheckButton" parent="Node/CanvasLayer/Settings_menu/HBoxContainer"]
margin_right = 1920.0
margin_bottom = 357.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Fullscreen"
align = 1
script = ExtResource( 4 )

[node name="Back-Button" type="Button" parent="Node/CanvasLayer/Settings_menu"]
margin_top = 722.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_menu" type="VBoxContainer" parent="Node/CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer_configure" type="Control" parent="Node/CanvasLayer/Multiplayer_menu"]
margin_right = 1920.0

[node name="server_ip_adress" type="LineEdit" parent="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure"]
margin_top = 4.0
margin_right = 1920.0
margin_bottom = 270.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
align = 1
placeholder_text = "Enter ip adress"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure"]
margin_top = 274.0
margin_right = 1920.0
margin_bottom = 540.0
size_flags_vertical = 3

[node name="Create_server" type="Button" parent="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/HBoxContainer"]
margin_right = 958.0
margin_bottom = 266.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Create Server"

[node name="Join_server" type="Button" parent="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/HBoxContainer"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 266.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 6 )
text = "Join Server"

[node name="Back-Button" type="Button" parent="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure"]
margin_top = 544.0
margin_right = 1920.0
margin_bottom = 810.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Devic_ip_adress" type="Label" parent="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure"]
margin_top = 940.0
margin_right = 1920.0
margin_bottom = 954.0
size_flags_vertical = 6
custom_fonts/font = ExtResource( 6 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Node/CanvasLayer/Main_menu/Multiplayer-Button" to="Node/CanvasLayer/Main_menu" method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Main_menu/Multiplayer-Button" to="Node/CanvasLayer/Multiplayer_menu" method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Main_menu/Settings-Button" to="Node/CanvasLayer/Main_menu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Main_menu/Settings-Button" to="Node/CanvasLayer/Settings_menu" method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Main_menu/Exit-Button" to="Node/CanvasLayer/Main_menu/Exit-Button" method="_on_Exitbutton_pressed"]
[connection signal="toggled" from="Node/CanvasLayer/Settings_menu/HBoxContainer/Fullscreen-Button" to="Node/CanvasLayer/Settings_menu/HBoxContainer/Fullscreen-Button" method="_on_FullscreenButton_toggled"]
[connection signal="pressed" from="Node/CanvasLayer/Settings_menu/Back-Button" to="Node/CanvasLayer/Main_menu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Settings_menu/Back-Button" to="Node/CanvasLayer/Settings_menu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/HBoxContainer/Create_server" to="Node/CanvasLayer/Multiplayer_menu" method="_on_Create_server_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/HBoxContainer/Join_server" to="Node/CanvasLayer/Multiplayer_menu" method="_on_Join_server_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/Back-Button" to="Node/CanvasLayer/Main_menu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/Back-Button" to="Node/CanvasLayer/Settings_menu" method="_on_BackButton_pressed"]
[connection signal="pressed" from="Node/CanvasLayer/Multiplayer_menu/Multiplayer_configure/Back-Button" to="Node/CanvasLayer/Multiplayer_menu" method="_on_BackButton_pressed"]
