extends VBoxContainer


func _ready():
	visible = true
	pass # Replace with function body.


func _on_SettingsButton_pressed():
	visible = false
	pass # Replace with function body.


func _on_BackButton_pressed():
	visible = true
	pass # Replace with function body.


func _on_MultiplayerButton_pressed():
	visible = false
	pass # Replace with function body.


func _on_OptionButton_item_selected(index):
	pass # Replace with function body.
